--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sass": "sass --watch ./styles/sass/main.scss ./styles/main.css"
   },
   "dependencies": {
+    "@next/font": "^13.0.0",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.55.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
